# quack-gui

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.py
example_apps/: clicks_per_sec_app.py  login_app.py
quack/: __init__.py  abc.py  animation.py  animation_helper.py  app.py  dispatcher.py  element.py  element_helper.py  element_manager.py  internal_events.py  rect.py
quack/animations/: __init__.py  hover_anims.py
quack/elements/: __init__.py  button.py  image.py  inputbox.py  rect.py  text.py
quack/font/: __init__.py  font.py  font_manager.py
